Transform: Redo does't work properly with NLA "Move" transform mode #73853

Closed
opened 2020-02-15 21:22:47 +01:00 by Alessio Monti di Sopra · 10 comments

System Information
Operating system: Linux-4.19.101-1-MANJARO-x86_64-with-arch-Manjaro-Linux 64 Bits

Blender Version
Broken: version: 2.83
Worked: 2.79

Short description of error
Wrong behaviour when trying to tweak the result of a translation on a NLA strip.

Exact steps for others to reproduce the error

  • In the default scene, create a simple animation with the cube.
  • Open an NLA editor and push the animation to a new strip.
  • Press G to move the strip.
  • Try to tweak the operation from the redo panel.
  • The result will be mirrored.

**System Information** Operating system: Linux-4.19.101-1-MANJARO-x86_64-with-arch-Manjaro-Linux 64 Bits **Blender Version** Broken: version: 2.83 Worked: 2.79 **Short description of error** Wrong behaviour when trying to tweak the result of a translation on a NLA strip. **Exact steps for others to reproduce the error** * In the default scene, create a simple animation with the cube. * Open an NLA editor and push the animation to a new strip. * Press G to move the strip. * Try to tweak the operation from the redo panel. - > The result will be mirrored.

Added subscriber: @a.monti

Added subscriber: @a.monti
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, checking...

Try to tweak the operation from the redo panel.

note there is no "Adjust Last Operation" HUD in the NLA, use F9 here to show the bug...

Can confirm, checking... > Try to tweak the operation from the redo panel. note there is no "Adjust Last Operation" HUD in the NLA, use F9 here to show the bug...
Member

On redo, we are running into [this ]] here (because we are not modal [ https:*developer.blender.org/diffusion/B/browse/master/source/blender/editors/transform/transform.c$2294 | here )

TransInfo / TransCon mode is CON_APPLY and constraints are either not set up correctly for NLA or we shouldnt be doing constraints in the first place?

1bfbfa2810 is related in a way I think.

This was working in 2.79 btw.

On redo, we are running into [this ]] here (because we are not modal [[ https:*developer.blender.org/diffusion/B/browse/master/source/blender/editors/transform/transform.c$2294 | here ](https:*developer.blender.org/diffusion/B/browse/master/source/blender/editors/transform/transform_mode_translate.c$341)) TransInfo / TransCon mode is `CON_APPLY` and constraints are either not set up correctly for NLA or we shouldnt be doing constraints in the first place? 1bfbfa2810 is related in a way I think. This was working in 2.79 btw.
Member

Added subscribers: @mano-wii, @ideasman42

Added subscribers: @mano-wii, @ideasman42
Member

Also not sure if the t->spacemtx (which gets dumped into t->orient_matrix) should be negated for NLA?
(seems convoluted to me...)

@ideasman42 , @mano-wii : interested?

Also not sure if the `t->spacemtx` (which gets dumped into `t->orient_matrix`) should be negated for NLA? (seems convoluted to me...) @ideasman42 , @mano-wii : interested?
Member

When "really" constraining to X, the t->spacemtx (which gets dumped into t->orient_matrix) is not negative
image.png

When "really" constraining to X, the `t->spacemtx` (which gets dumped into `t->orient_matrix`) is not negative ![image.png](https://archive.blender.org/developer/F8345140/image.png)

This issue was referenced by 847bb4c4e0

This issue was referenced by 847bb4c4e0c35a4f617d75a700f79932e310c6db

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2020-02-17 17:05:50 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#73853
No description provided.