Fix T73853: Redo does't work properly with NLA "Move" transform mode

The orientation matrix when re-doing some transform operations was negated.
Thanks @lichtwerk for pointing out the problem.